# SDLTestCLion

./: CMakeLists.txt  README.md
SDL2Sample1/: CMakeLists.txt  Common.h  MainWindow.cpp  MainWindow.h  ResPath.h  main.cpp
SDL2Sample1/core/: EventHandler.cpp  EventHandler.h  GameLoop.cpp  GameLoop.h
SDL2Sample1/headers/: common.h
SDL2Sample1/helpers/: Bitmap.cpp  Bitmap.h  BitmapLoader.cpp  BitmapLoader.h  ImageLoader.cpp  ImageLoader.h  TextureLoader.cpp  TextureLoader.h
SDL2Sample1/player/: Dot.cpp  Dot.h
SDL2Sample1/settings/: GameConfig.cpp  GameConfig.h
SDL2Sample1/utility/: ResPath.h  common.h  resource_path_template.h
SDL2Sample1/window/: MainWindow.cpp  MainWindow.h  RenderObject.cpp  RenderObject.h
cmake/: FindSDL2.cmake
res/logger/: log.properties
